fix merge avec comparatif

--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -1,4 +1,15 @@
-<div id="comparison">
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>comparatif</title>
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/sidebar.css" type="text/css" />
+    <link rel="stylesheet" href="/css/slider.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="/css/interactiveTab.css" />
+</head>
+<body>
+<div id="comparison" class="page">
 	<div id="wrapper">
 		<div id="sidebar-wrapper">
 			<h2>COMPARATIF</h2>
@@ -318,3 +329,10 @@
 	</div>
 	<!-- #wrapper -->
 </div>
+    <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
+
+
+  <script type="text/javascript" src="/js/battle.js"></script>
+</body>
