--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -41,10 +41,11 @@
 		
 		<div class="baspage">
 		
-		<a id="nav1" rel="relativeanchor" href="#slide1">
+		<a id="nav1" rel="relativeanchor" href="#comparison">
 			<img class="img-circle img-responsive inline-block" src="/images/nextSlide.png" alt="page suivante"></img>
 		</a>
-	</div>
+		</div>
 		
+	</div>
 </div>
 		
