--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -17,7 +17,7 @@
         
         <div id="comparison" class="page">
         <iframe
-        src="https://hyblab2015-ayssti-3.c9.io/comparatif.html"
+        src="https://hyblab2015bis-anhaflint.c9.io/comparatif.html"
         width="100%"
         height="100%"
         scrolling="auto"
