--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
     <link rel="stylesheet" href="/css/dataviz1.css" type="text/css" />
-
-    
+    <link rel="stylesheet" type="text/css" href="/css/styleoutro.css" />
+    <link rel="stylesheet" type="text/css" href="/js/shadowbox/shadowbox.css">
+    <script type="text/javascript" src="/js/shadowbox/shadowbox.js"></script>
+    <script type="text/javascript">
+        Shadowbox.init({
+            handleOversize: "resize"
+        });</script>
+        
 </head>
 <body>
     <!--<div class="container-fluid">-->
