ajout vestiaire aux slides & matchfinal json

--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -1,10 +1,16 @@
-<div id="over">
-    <span id="casierl"></span>
-    <a href="/images/porte-manteau vide.png" rel="shadowbox;"><img src="/images/casier 1 vide.png"></a>
-    
-    <span class="Centerer"></span>
-    <img class="Centered" src="/images/porte-manteau vide.png" />
-    
-    <span id="casierr"></span>
-    <a href="/images/porte-manteau vide.png" rel="shadowbox;"><img src="/images/casier 2 vide.png"></a>
+<div id="slideoutro" class="page">
+    <div id="titleoutro">
+        <img src="/images/TitleVestiaire.png">
+    </div>
+    <div id="pics">
+        <div id="casierl" class="Centerer Centered">
+            <a href="/images/PopMerci.png" rel="shadowbox;width=540;height=371"><img src="/images/CasierLeft.png"></a>
+        </div>
+        <div id="coatrack" class="Centerer Centered">
+            <a href="/images/PopEquipe.png" rel="shadowbox;width=540;height=371"><img src="/images/CoatRack.png"></a>
+        </div>
+        <div id="casierr" class="Centerer Centered">
+            <a href="/images/PopCoulisses.png" rel="shadowbox;width=540;height=371"><img src="/images/CasierRight.png"></a>
+        </div>
+    </div>
 </div>
