creation du debut du slide matchfinal

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
     <link rel="stylesheet" href="/css/dataviz1.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleoutro.css" />
+    <link rel="stylesheet" type="text/css" href="/css/stylematchfinal.css" />
     <link rel="stylesheet" type="text/css" href="/js/shadowbox/shadowbox.css">
     <script type="text/javascript" src="/js/shadowbox/shadowbox.js"></script>
     <script type="text/javascript">
@@ -30,7 +31,7 @@
         frameborder="0" >
         </iframe>
         </div>
-
+        {% include "./matchfinal.html" %}
         {% include "./outro.html" %}
 
     <!--</div>-->
