add subtitle for sidebar

--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -12,7 +12,10 @@
 <div id="comparison" class="page">
 	<div id="wrapper">
 		<div id="sidebar-wrapper">
-			<h2>COMPARATIF</h2>
+			<div>
+				<h2>COMPARATIF</h2>
+	    		<h5>Du nombre d'entreprise selon les NAF</h5>
+    		</div>
 			<div class="panel-group sidebar-nav" id="accordion" role="tablist" aria-multiselectable="true">
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingOne">
