--- a/le_journal_des_entreprises/html/dataviz2.html
+++ b/le_journal_des_entreprises/html/dataviz2.html
@@ -20,29 +20,29 @@
       <div id="subcol1">
         <div class="cell1">
           <div class="titlecell short-div">10,7 %</div>
-          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprise</div>
+          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
         <div class="cell2">
           <div class="titlecell short-div">10,7 %</div>
-          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprise</div>
+          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
          <div class="cell3">
           <div class="short-div"><img src="/images/Médaille+de1000entreprises.png"></div>
-          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprise</div>
+          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
       </div>
       <div id="subcol2">
         <div class="cell1">
           <div class="titlecell short-div">10,7 %</div>
-          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprise</div>
+          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
         <div class="cell2">
           <div class="titlecell short-div">10,7 %</div>
-          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprise</div>
+          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
          <div class="cell3">
           <div class="short-div"><img src="/images/Médaille+de1000entreprises.png"></div>
-          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprise</div>
+          <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
       </div>
     </div>
