--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -329,6 +329,13 @@
 	</div>
 	<!-- #wrapper -->
 </div>
+	<div class="baspage">
+		
+		<a id="nav1" rel="relativeanchor" href="https://hyblab2015-ayssti-3.c9.io/#slideoutro">
+			<img class="img-circle img-responsive inline-block" src="/images/nextSlide.png" alt="page suivante"></img>
+		</a>
+	</div>
+		
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
