--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
     <link rel="stylesheet" href="/css/dataviz1.css" type="text/css" />
+    <link rel="stylesheet" href="/css/salariesNum.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleoutro.css" />
     <link rel="stylesheet" type="text/css" href="/css/stylematchfinal.css" />
     <link rel="stylesheet" type="text/css" href="/js/shadowbox/shadowbox.css">
+    <link rel="stylesheet" type="text/css" href="/css/styledataviz2.css" />
     <script type="text/javascript" src="/js/shadowbox/shadowbox.js"></script>
     <script type="text/javascript">
         Shadowbox.init({
@@ -20,11 +22,11 @@
     <!--<div class="container-fluid">-->
         {% include "./intro.html" %}
         {% include "./dataviz1.html" %}
-        
+        {% include "./salariesNum.html" %}
         
         <div id="comparison" class="page">
         <iframe
-        src="https://hyblab2015bis-anhaflint.c9.io/comparatif.html"
+        src="https://hyblab2015-ayssti-3.c9.io/comparatif.html"
         width="100%"
         height="100%"
         scrolling="auto"
