--- a/pays_de_la_loire/html/frame.html
+++ b/pays_de_la_loire/html/frame.html
@@ -88,7 +88,7 @@
 
 		<!-- Page1bis -->
 		<section class="page1bis" style="visibility: hidden;">
-			<img src="img/page1bis.png" alt="Petit historique" />
+			<img src="img/page1bis.png" alt="Petit historique" width="960" height="625"/>
 			<div style="display: none;">
 				<p>1946 L'idée des Olympiades naît dans la tête de José Antonio Elola Olaso</p>
 				<p>1950 La 1ère compétition est nationale, a lieu à Madrid et rassemble 24 participants</p>
@@ -137,7 +137,7 @@
 
 		<!-- page4 -->
 		<section class="page1quater" style="visibility: hidden;">
-			<img src="img/page1quater.png" alt="Il vous faut une forte motivation!" />
+			<img src="img/page1quater.png" alt="Il vous faut une forte motivation!"  width="960" height="625"/>
 			<div style="visibility: hidden;">
 				<p>Il te faut</p>
 				<p>Une forte motivation</p>
@@ -201,7 +201,7 @@
 				<p>À l'international, qui participe et qui sont les champions ?</p>
 			</div>
 			<div class="imgsMonde">
-				<img src="img/page2/2013.png" />
+				<img src="img/page2/2013.png" width="550" height="483"/>
 			</div>
 			<div style="visibility: hidden;">
 				<p>participants</p>
@@ -226,11 +226,11 @@
 		<!-- Quatrième page -->
 		<section class="page4" style="visibility: hidden;">
 			<div class="headerP4">
-				<img class="imgPointilles" src="img/page4/pointilles.png" />
+				<img class="imgPointilles" src="img/page4/pointilles.png" width="796px" height="310px"/>
 				<ul class="categories">
 					<li class="boutonCategorie1">
 						<!-- Métiers de l'alimentation -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/Alimentation.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/Alimentation.png" class="boutonCategorie" height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">Alimentation</li>
@@ -246,7 +246,7 @@
 					</li>
 					<li class="boutonCategorie2">
 						<!-- Métiers de l'automobile -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/Automobile.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/Automobile.png" class="boutonCategorie"  height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">Automobile</li>
@@ -260,7 +260,7 @@
 					</li>
 					<li class="boutonCategorie3">
 						<!-- Métiers du bâtiment et des travaux publics -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/BTP.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/BTP.png" class="boutonCategorie"  height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">BTP</li>
@@ -292,7 +292,7 @@
 					</li>
 					<li class="boutonCategorie4">
 						<!-- Métiers de l'industrie -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/Industrie.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/Industrie.png" class="boutonCategorie"  height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">Industrie</li>
@@ -332,7 +332,7 @@
 					</li>
 					<li class="boutonCategorie5">
 						<!-- Métiers de la maintenance -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/Maintenance.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/Maintenance.png" class="boutonCategorie"  height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">Maintenance</li>
@@ -342,7 +342,7 @@
 					</li>
 					<li class="boutonCategorie6">
 						<!-- Métiers des nouvelles technologies -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/High Tech.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/High Tech.png" class="boutonCategorie"  height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">Nouvelles Technologies</li>
@@ -364,7 +364,7 @@
 					</li>
 					<li class="boutonCategorie7">
 						<!-- Métiers du service -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/Services.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/Services.png" class="boutonCategorie"  height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">Services</li>
@@ -384,7 +384,7 @@
 					</li>
 					<li class="boutonCategorie8">
 						<!-- Métiers du végétal -->
-						<a href="javascript:void(0);"><img src="img/logo_metiers/Vegetal.png" class="boutonCategorie" />
+						<a href="javascript:void(0);"><img src="img/logo_metiers/Vegetal.png" class="boutonCategorie"  height='100px' width='100px'/>
 						</a>
 						<ul>
 							<li class="nomCategorie">Végétal</li>
@@ -414,7 +414,7 @@
 						document.write('</div>');
 					}
 				</script>
-				<img src="img/page4/Podium-123.png" alt="podium" class="lePodium" width='500' />
+				<img src="img/page4/Podium-123.png" alt="podium" class="lePodium" width='500px' height="203px"/>
 				<div class="selectionsAnnees">
 					<div class="selectionAnnee">
 						<span class="selectionAnneeBouton"></span>
@@ -443,7 +443,7 @@
 					</div>
 				</div>
 			</div>
-			<img class="boutonMetiers" src="img/page4/boutonMetiers.png" />
+			<img class="boutonMetiers" src="img/page4/boutonMetiers.png" width="100px" height="100px"/>
 			<div style="visibility: hidden;">
 				<p>Les différents pôles de métiers</p>
 			</div>
@@ -455,7 +455,7 @@
 				<p>Et la France alors ?</p>
 			</div>
 			<div>
-				<img class="clicRegion" src="img/page6/clic_region.png" />
+				<img class="clicRegion" src="img/page6/clic_region.png" width="160px" height="160px"/>
 				<div class="carteFrance"></div>
 				<div class="P6_droite">
 					<div style="text-align:center; font-size: 15px; padding-left: 40px;">Evolution du classement de la région<br>lors les sélections nationales</div>
@@ -464,7 +464,7 @@
 						<div class="infoP6_2 infoP6_2Active">
 						</div>
 					</div>
-					<img class="imgFrance" src="img/page6/international.png" />
+					<img class="imgFrance" src="img/page6/international.png" width="800px" height="374px"/>
 				</div>
 				<div style="visibility: hidden;">
 					<p>3000 repas par service,soit 6000 repas par jour</p>
