Fixes for JDE project

--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -3,10 +3,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>comparatif</title>
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="/css/sidebar.css" type="text/css" />
-    <link rel="stylesheet" href="/css/slider.css" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="/css/interactiveTab.css" />
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/sidebar.css" type="text/css" />
+    <link rel="stylesheet" href="css/slider.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="css/interactiveTab.css" />
 </head>
 <body>
 <div id="comparison" class="page">
@@ -303,7 +303,7 @@
 
 		<div id="page-content-wrapper">
 			<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">
-				<img alt="menu icon" src="/images/menu-icon.png"/>
+				<img alt="menu icon" src="images/menu-icon.png"/>
 			</a>
 			<div class="page-tabs row">
 				<div id="tabHeader" class="col-xs-offset-4 col-xs-4 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
@@ -334,15 +334,15 @@
 </div>
 	<div class="baspage">
 		
-		<a id="nav1" rel="relativeanchor" href="https://hyblab2015-ayssti-3.c9.io/#slideoutro">
-			<img class="img-circle img-responsive inline-block" src="/images/nextSlide.png" alt="page suivante"></img>
+		<a id="nav1" rel="relativeanchor" href="./#slideoutro">
+			<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
 		</a>
 	</div>
 		
-    <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
+    <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-slider.js"></script>
 
 
-  <script type="text/javascript" src="/js/battle.js"></script>
+  <script type="text/javascript" src="js/battle.js"></script>
 </body>
