--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -99,7 +99,7 @@
 <div class="baspage container">
 
 	<a id="nav1" rel="relativeanchor" href="#salariesNum">
-		<img class="img-circle img-responsive inline-block" src="/images/nextSlide.png" alt="page suivante"></img>
+		<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
 	</a>
 </div>
 
