--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -3,15 +3,15 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Le journal des entreprises</title>
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
-    <link rel="stylesheet" href="/css/dataviz1.css" type="text/css" />
-    <link rel="stylesheet" href="/css/salariesNum.css" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="/css/styleoutro.css" />
-    <link rel="stylesheet" type="text/css" href="/css/stylematchfinal.css" />
-    <link rel="stylesheet" type="text/css" href="/js/shadowbox/shadowbox.css">
-    <link rel="stylesheet" type="text/css" href="/css/styledataviz2.css" />
-    <script type="text/javascript" src="/js/shadowbox/shadowbox.js"></script>
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="css/styleintro.css" />
+    <link rel="stylesheet" href="css/dataviz1.css" type="text/css" />
+    <link rel="stylesheet" href="css/salariesNum.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="css/styleoutro.css" />
+    <link rel="stylesheet" type="text/css" href="css/stylematchfinal.css" />
+    <link rel="stylesheet" type="text/css" href="js/shadowbox/shadowbox.css">
+    <link rel="stylesheet" type="text/css" href="css/styledataviz2.css" />
+    <script type="text/javascript" src="js/shadowbox/shadowbox.js"></script>
     <script type="text/javascript">
         Shadowbox.init({
             handleOversize: "resize"
@@ -27,7 +27,7 @@
         
         <div id="comparison" class="page">
             <iframe
-            src="https://hyblab2015-ayssti-3.c9.io/comparatif.html"
+            src="comparatif.html"
             width="100%"
             height="100%"
             scrolling="auto"
@@ -38,12 +38,12 @@
         {% include "./matchfinal.html" %}
         {% include "./outro.html" %}
 
-    <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
-    <script type="text/javascript" src="/js/scroll.js"></script>
+    <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-slider.js"></script>
+    <script type="text/javascript" src="js/scroll.js"></script>
     <script type="text/javascript" src="js/highcharts-min.js"></script>
-    <script type="text/javascript" src="/js/dataviz1.js"></script>
+    <script type="text/javascript" src="js/dataviz1.js"></script>
 
 </body>
 </html>
