--- a/le_journal_des_entreprises/html/matchfinal.html
+++ b/le_journal_des_entreprises/html/matchfinal.html
@@ -1,7 +1,7 @@
 <div id="slidematchfinal" class="page">
  
         <div id="bandeaupodium" class="container">
-          <img src="/images/StarsBanner.png"/>
+          <img src="images/StarsBanner.png"/>
         </div>
         <div id="podium" class="container"></div>
 </div>
