--- a/le_journal_des_entreprises/html/dataviz2.html
+++ b/le_journal_des_entreprises/html/dataviz2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="/css/styledataviz2.css" />
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="css/styledataviz2.css" />
   </head>
   <body>
   <div id="dataviz2" class="container">
@@ -14,7 +14,7 @@
           Mais il y aussi des start-up rennaises, comme Cocourses, un concurrent d’Alloresto, Eliga, qui propose une technologie multi-écrans pour animer les conférences vidéos ou encore Jaivu, concepteur d’applications mobiles pour « réconcilier les hommes et le shopping ».<br />
           Côté évènement, le forum « Opportunités digitales » réunit sur deux jours des acteurs français et québécois. D’autres acteurs animent la ville comme le pôle de compétitivité « Images et réseaux », un fablab et une cantine numérique, qui compte 166 adhérents.</div>
         </div>
-        <div id="DV2pic"><img src="/images/Rennes.png"></div>
+        <div id="DV2pic"><img src="images/Rennes.png"></div>
     </div>
     <div id="col2">
       <div id="subcol1">
@@ -27,7 +27,7 @@
           <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
          <div class="cell3">
-          <div class="short-div"><img src="/images/Médaille+de1000entreprises.png"></div>
+          <div class="short-div"><img src="images/Médaille+de1000entreprises.png"></div>
           <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
       </div>
@@ -41,13 +41,13 @@
           <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
          <div class="cell3">
-          <div class="short-div"><img src="/images/Médaille+de1000entreprises.png"></div>
+          <div class="short-div"><img src="images/Médaille+de1000entreprises.png"></div>
           <div class="undertitle">% d'entreprises du numérique dans le nombre global d'entreprises</div>
         </div>
       </div>
     </div>
   </div>
-    <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
