Fix navigation bug

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -33,6 +33,11 @@
             scrolling="auto"
             frameborder="0" >
             </iframe>
+            <div class="baspage col-md-2 col-md-offset-6">
+		  		<a id="nav1" rel="relativeanchor" href="#slidematchfinal">
+        			<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
+        		</a>
+        	</div>
         </div>
         
         {% include "./matchfinal.html" %}
