--- a/nantes/html/index.html
+++ b/nantes/html/index.html
@@ -15,7 +15,7 @@
 
 			<!-- écran Accueil -->
 			<section id="slide1">
-				<div id="getDown">
+				<div id="getDown>"
 					<img src="img/index/fleche_accueil.png"></img>
 				</div>
 			</section>
