--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -49,6 +49,6 @@
     <script type="text/javascript" src="js/scroll.js"></script>
     <script type="text/javascript" src="js/highcharts-min.js"></script>
     <script type="text/javascript" src="js/dataviz1.js"></script>
-
+    <script type="text/javascript" src="js/outro.js"></script>
 </body>
 </html>
