--- a/le_journal_des_entreprises/html/matchfinal.html
+++ b/le_journal_des_entreprises/html/matchfinal.html
@@ -15,7 +15,7 @@
 
         </div>
         
-        <div class="baspage container col-md-1 col-md-offset-6">
+        <div class="baspage col-md-4 col-md-offset-4">
 
         	<a id="nav1" rel="relativeanchor" href="#slideoutro">
         		<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
