--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -34,4 +34,10 @@
 			</div>
 		</div>
     </div>
+    <div class="baspage col-md-4 col-md-offset-4">
+
+	<a id="nav1" rel="relativeanchor" href="#slide1">
+		<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
+	</a>
+</div>
 </div>
