set up dataviz 1

--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -45,6 +45,8 @@
 									<div id="DV2TownName" class="short-div">
 										
 									</div>
+									<div id="hiddenName" class="hidden">
+									</div>
 									<div id="DV2Description" class="short-div">
 										
 									</div>
