fix global layout

--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -1,43 +1,52 @@
 <div id="slideoutro" class="page">
-    <div id="titleoutro">
-        <img src="images/TitleVestiaire.png">
-    </div>
-    <div id="pics">
-        <img id="casierG" src="images/CasierLeft.png" alt="casierGauche"/>
-        <div class=" modal fade" id="modalMerci" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content" id="modalDataviz2">
-					<div class=" modal-body">
-						<img src="images/PopMerci.png" alt="remerciements"/>
+	<div class="container">
+		<div class="row">
+		    <div class="col-md-12" id="titleOutro">
+		        <img src="images/TitleVestiaire.png">
+		    </div>
+	    </div>
+	    <div id="pics" class="row">
+	    	<div class="flush-left col-xs-4 col-md-4 col-lg-4">
+		        <img class="vestiaires" id="casierG" src="images/CasierLeft.png" alt="casierGauche"/>
+		        <div class=" modal fade" id="modalMerci" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content" id="modalDataviz2">
+							<div class=" modal-body">
+								<img src="images/PopMerci.png" alt="remerciements"/>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-        <img id="coatRack" src="images/CoatRack.png" alt="coatrack" />
-        <div class=" modal fade" id="modalEquipe" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content" id="modalDataviz2">
-					<div class=" modal-body">
-						<img src="images/PopEquipe.png" alt="equipe"/>
+			<div class="col-xs-4 col-md-4 col-lg-4">
+		        <img class="vestiaires" id="coatRack" src="images/CoatRack.png" alt="coatrack" />
+		        <div class=" modal fade" id="modalEquipe" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content" id="modalDataviz2">
+							<div class=" modal-body">
+								<img src="images/PopEquipe.png" alt="equipe"/>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-        <img id="casierD" src="images/CasierRight.png" alt="casier droite"/>
-        <div class=" modal fade" id="modalCoulisse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content" id="modalDataviz2">
-					<div class=" modal-body">
-						<img src="images/PopCoulisses.png" alt="coulisses"/>
+			<div class="flush-right col-xs-4 col-md-4 col-lg-4">
+		        <img class="vestiaires" id="casierD" src="images/CasierRight.png" alt="casier droite"/>
+		        <div class=" modal fade" id="modalCoulisse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content" id="modalDataviz2">
+							<div class=" modal-body">
+								<img src="images/PopCoulisses.png" alt="coulisses"/>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-    </div>
-    <div class="baspage col-md-4 col-md-offset-4">
-
-	<a id="nav1" rel="relativeanchor" href="#slide1">
-		<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
-	</a>
-</div>
+	    </div>
+	</div>
+    <div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
+		<a id="nav1" rel="relativeanchor" href="#slide1">
+			<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
+		</a>
+	</div>
 </div>
