--- a/nantes.fr/index.html
+++ b/nantes.fr/index.html
@@ -15,6 +15,11 @@
 
 			<!-- écran Accueil -->
 			<section id="slide1">
+				<div class="logo_container_bis">
+					<a href="https://www.facebook.com/nantes.fr?fref=ts"><div class="logosBis" id="facebook"></div></a>
+					<a href="https://twitter.com/nantesfr?lang=fr"><div class="logosBis" id="twitter"></div></a>
+					<a href="https://www.behance.net/gallery/23551071/HYBLAB-2015-Egalit-Femmes-Hommes"><div class="logosBis" id="behance"></div></a>
+				</div>
 				<div id="getDown">
 					<img src="img/index/fleche_accueil.png"></img>
 				</div>
@@ -43,17 +48,17 @@
 				</div>
 				
 				<div class="logo_container_bis">
-					<a href="#"><div class="logosBis" id="facebook"></div></a>
-					<a href="#"><div class="logosBis" id="twitter"></div></a>
-					<a href="#"><div class="logosBis" id="behance"></div></a>
+					<a href="https://www.facebook.com/nantes.fr?fref=ts"><div class="logosBis" id="facebook"></div></a>
+					<a href="https://twitter.com/nantesfr?lang=fr"><div class="logosBis" id="twitter"></div></a>
+					<a href="https://www.behance.net/gallery/23551071/HYBLAB-2015-Egalit-Femmes-Hommes"><div class="logosBis" id="behance"></div></a>
 				</div>
 			</section>
 			
 			<section id="creditsBis">
 				<div class="logo_container_bis">
-					<a href="#"><div class="logosBis" id="facebook"></div></a>
-					<a href="#"><div class="logosBis" id="twitter"></div></a>
-					<a href="#"><div class="logosBis" id="behance"></div></a>
+					<a href="https://www.facebook.com/nantes.fr?fref=ts"><div class="logosBis" id="facebook"></div></a>
+					<a href="https://twitter.com/nantesfr?lang=fr"><div class="logosBis" id="twitter"></div></a>
+					<a href="https://www.behance.net/gallery/23551071/HYBLAB-2015-Egalit-Femmes-Hommes"><div class="logosBis" id="behance"></div></a>
 				</div>
 			</section>
 
