--- a/nantes.fr/stats.html
+++ b/nantes.fr/stats.html
@@ -42,7 +42,7 @@
 					<center><img id="img2" src="img/stats/tranche_age/femme-age2.png" /><P class="tranche_age">26-40 ANS</P></br/></center>
 					<center><img id="img3" src="img/stats/tranche_age/femme-age3.png" /><P class="tranche_age">41-60 ANS</P></br/></center>
 					<center><img id="img4" src="img/stats/tranche_age/femme-age4.png" /><P class="tranche_age">61 ANS ou plus</P></br/></center>
-					<center><img id="img5" src="img/stats/tranche_age/femme-age5.png" /><P class="tranche_age">Très Drôle</P></br/></center>
+					<center><img id="img5" src="img/stats/tranche_age/cercueiljosie.png" /><P class="tranche_age">Très Drôle</P></br/></center>
 				</div>
 				
 				<div class="bouton_valider">
@@ -157,7 +157,7 @@
 				</div>
 				<div class="dataviz">
 					<div class="dataviz_text">
-						<p class="synopsis">Les <b style="color: green;">HOMMES</b> gagnent en moyenne <b>3 EUROS DE PLUS</b> de salaire net horaire que les femmmes, soit 24% de différence.</p>
+						<p class="synopsis">Les <b style="color: #a2ddab;">HOMMES</b> gagnent en moyenne <b>3 EUROS DE PLUS</b> de salaire net horaire que les femmmes, soit 24% de différence.</p>
 					</div>
 					<div class="dataviz_graph">
 						<div class="graph_slide6">
@@ -270,7 +270,7 @@
 				</div>
 				<div class="dataviz">
 					<div class="dataviz_text">
-						<p class="synopsis">les <b style="color: #ffe0a1;">NANTAIS</b> sont plus touchées par les <b>TEMPS PARTIES</b> et les <b>CDD</b>. la preuve: 1/3 des femmes actives travaillent à temps partiel. </p>
+						<p class="synopsis">les <b style="color: #ffe0a1;">NANTAISES</b> sont plus touchées par les <b>TEMPS PARTIES</b> et les <b>CDD</b>. la preuve: 1/3 des femmes actives travaillent à temps partiel. </p>
 						<a class="fancybox" href="#synopsis_temps_partiel" /><img class="enSavoirPlus" src="img/misc/logo-plus.png"/></a>
 					</div>
 					<div class="dataviz_graph" id="dataviz_graph12">
@@ -406,7 +406,7 @@
 				</div>
 				<div class="dataviz">
 					<div class="dataviz_text">
-						<p class="synopsis">À Nantes, sur l'ensemble des associattions, <b>LES PRÉSIDENCES D'ASSOCIATIONS</b> sont majoritairement tenues par des <b style="color: green;">HOMMES</b>.</p>
+						<p class="synopsis">À Nantes, sur l'ensemble des associattions, <b>LES PRÉSIDENCES D'ASSOCIATIONS</b> sont majoritairement tenues par des <b style="color: #a2ddab;">HOMMES</b>.</p>
 					</div>
 				</div>
 			</div>
@@ -422,19 +422,19 @@
 				</div>
 				
 				<div class="logo_container_bis">
-					<a href="#"><div class="logosBis" id="facebook"></div></a>
-					<a href="#"><div class="logosBis" id="twitter"></div></a>
-					<a href="#"><div class="logosBis" id="behance"></div></a>
+					<a href="https://www.facebook.com/nantes.fr?fref=ts"><div class="logosBis" id="facebook"></div></a>
+					<a href="https://twitter.com/nantesfr?lang=fr"><div class="logosBis" id="twitter"></div></a>
+					<a href="https://www.behance.net/gallery/23551071/HYBLAB-2015-Egalit-Femmes-Hommes"><div class="logosBis" id="behance"></div></a>
 				</div>
 			</section>
 		
 		<!--Crédits Bis -->
 		<section id="creditsBis">
 			<div class="logo_container_bis">
-				<a href="#"><div class="logosBis" id="facebook"></div></a>
-				<a href="#"><div class="logosBis" id="twitter"></div></a>
-				<a href="#"><div class="logosBis" id="behance"></div></a>
-			</div>
+					<a href="https://www.facebook.com/nantes.fr?fref=ts"><div class="logosBis" id="facebook"></div></a>
+					<a href="https://twitter.com/nantesfr?lang=fr"><div class="logosBis" id="twitter"></div></a>
+					<a href="https://www.behance.net/gallery/23551071/HYBLAB-2015-Egalit-Femmes-Hommes"><div class="logosBis" id="behance"></div></a>
+				</div>
 		</section>
 	</div>
 	
