fix bouon salariés

--- a/le_journal_des_entreprises/html/salariesNum.html
+++ b/le_journal_des_entreprises/html/salariesNum.html
@@ -88,6 +88,8 @@
 				<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
 			</a>
 		</div>
+		
+		</div>
 	</div>
 </div>
 		
