bouton bas de page centré avec bootstrap partout, changment d'année dans popup

--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -18,9 +18,9 @@
 					<div class="chiffreAnnee ca2">
 						0
 					</div>
-					<div id="ca3" class="chiffreAnnee ca3">
+					<div class="chiffreAnnee ca3">
 					</div>
-					<div id="ca4" class="chiffreAnnee ca4">
+					<div class="chiffreAnnee ca4">
 					</div>
 					<div class="yearplus plusmoins">
 						+
@@ -84,7 +84,7 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="selectionAnneeD1">
+									<div class="selectionAnneePopup">
 
 										<div class="yearless plusmoins">
 											-
@@ -95,10 +95,10 @@
 										<div class="chiffreAnnee ca2">
 											0
 										</div>
-										<div id="ca3" class="chiffreAnnee ca3">
+										<div class="chiffreAnnee ca3">
 						
 										</div>
-										<div id="ca4" class="chiffreAnnee ca4">
+										<div class="chiffreAnnee ca4">
 						
 										</div>
 										<div class="yearplus plusmoins">
@@ -126,10 +126,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="baspage container">
+	</div>
+		<div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
 			<a id="nav1" rel="relativeanchor" href="#salariesNum">
 				<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
 			</a>
 		</div>
-	</div>
 </div>
