--- a/le_journal_des_entreprises/html/salariesNum.html
+++ b/le_journal_des_entreprises/html/salariesNum.html
@@ -83,13 +83,14 @@
 	   		</div>
 
     	
-		<div class="baspage container">
+	
+		
+		</div>
+	</div>
+		<div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
 			<a id="nav1" rel="relativeanchor" href="#comparison">
 				<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
 			</a>
 		</div>
-		
-		</div>
-	</div>
 </div>
 		
