--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -50,5 +50,6 @@
     <script type="text/javascript" src="js/highcharts-min.js"></script>
     <script type="text/javascript" src="js/dataviz1.js"></script>
     <script type="text/javascript" src="js/outro.js"></script>
+    <script type="text/javascript" src="js/matchfinal.js"></script>
 </body>
 </html>
