--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -3,8 +3,8 @@
 	<div class="insideD1 container">
 		
 		<div class="row">
-			<div class="headD1 col-xs-12 col-md-12 col-lg-12">
-				<div class="titleD1 col-xs-6 col-md-3 col-lg-3">
+			<div class="headD1">
+				<div class="titleD1">
 					<h1>Nombre d'entreprises</h1>
 					<h2>spécialisées dans le numérique</h2>
 				</div>
