--- a/le_journal_des_entreprises/html/matchfinal.html
+++ b/le_journal_des_entreprises/html/matchfinal.html
@@ -200,10 +200,11 @@
                 </div>
             </div>
         </div>
-    <div class="baspage container">
+   
+    </div>
+     <div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
     	<a id="nav1" rel="relativeanchor" href="#slideoutro">
     		<img class="img-circle img-responsive inline-block" src="images/nextSlideB.png" alt="page suivante"></img>
     	</a>
-    </div>
     </div>
 </div>
