debut bout d2 plus bug contener

--- a/le_journal_des_entreprises/html/dataviz2.html
+++ b/le_journal_des_entreprises/html/dataviz2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/styledataviz2.css" />
   </head>
   <body>
-  <div id="dataviz2" class="container">
+  <div id="dataviz2" class="container contenaireMaison">
     <div id="col1">
         <div>
           <div id="DV2TownName" class="short-div">Rennes</div>
