--- a/le_journal_des_entreprises/html/salariesNum.html
+++ b/le_journal_des_entreprises/html/salariesNum.html
@@ -1,6 +1,6 @@
 <div id="salariesNum" class="page">
     	
-    <div class="insideS1 container">
+    <div class="insideS1 container contenaireMaison">
     
     	<div class="row">
 	    	<div class="headD1">
