--- a/le_journal_des_entreprises/html/dataviz1.html
+++ b/le_journal_des_entreprises/html/dataviz1.html
@@ -1,6 +1,6 @@
 <div id="dataviz1" class="page">
 
-	<div class="insideD1 container">
+	<div class="insideD1 container contenaireMaison">
 		
 		<div class="row">
 			<div class="headD1">
