--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -5,8 +5,8 @@
 		        <img src="images/TitleVestiaire.png">
 		    </div>
 	    </div>
-	    <div id="pics" class="row">
-	    	<div class="flush-left col-xs-4 col-md-4 col-lg-4">
+	    <div id="pics">
+	    	<div class="imgVest">
 		        <img class="vestiaires" id="casierG" src="images/CasierLeft.png" alt="casierGauche"/>
 		        <div class=" modal fade" id="modalMerci" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4 col-md-4 col-lg-4">
+			<div class="imgVest coatRack">
 		        <img class="vestiaires" id="coatRack" src="images/CoatRack.png" alt="coatrack" />
 		        <div class=" modal fade" id="modalEquipe" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="flush-right col-xs-4 col-md-4 col-lg-4">
+			<div class="imgVest">
 		        <img class="vestiaires" id="casierD" src="images/CasierRight.png" alt="casier droite"/>
 		        <div class=" modal fade" id="modalCoulisse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
