--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/salariesNum.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="css/styleoutro.css" />
     <link rel="stylesheet" type="text/css" href="css/stylematchfinal.css" />
-    <link rel="stylesheet" type="text/css" href="js/shadowbox/shadowbox.css">
     <link rel="stylesheet" type="text/css" href="css/styledataviz2.css" />
+    <link rel="stylesheet" type="text/css" href="css/jquery.mCustomScrollbar.css" />
     <script type="text/javascript" src="js/shadowbox/shadowbox.js"></script>
     <script type="text/javascript">
         Shadowbox.init({
@@ -51,5 +51,6 @@
     <script type="text/javascript" src="js/dataviz1.js"></script>
     <script type="text/javascript" src="js/outro.js"></script>
     <script type="text/javascript" src="js/matchfinal.js"></script>
+    <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 </body>
 </html>
