fixes last minute

--- a/le_journal_des_entreprises/html/matchfinal.html
+++ b/le_journal_des_entreprises/html/matchfinal.html
@@ -9,6 +9,9 @@
             <polygon fill="#EBB000" points="63.068,17.623 64.935,21.404 69.108,22.012 66.088,24.955 66.799,29.111 63.068,27.148 
             	59.336,29.111 60.049,24.955 57.029,22.012 61.202,21.404 "/>
             </svg>
+            <div>
+                <h1><span>Les</span> podiums <span>du</span> numérique</h1>
+            </div>
         </div>
         <!-- copier coller -->
         
