--- a/le_journal_des_entreprises/html/outro.html
+++ b/le_journal_des_entreprises/html/outro.html
@@ -120,7 +120,7 @@
 	</div>
     <div class="baspage col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
 		<a id="nav1" rel="relativeanchor" href="#slide1">
-			<img class="img-circle img-responsive inline-block" src="images/nextSlide.png" alt="page suivante"></img>
+			<img class="img-circle img-responsive inline-block" src="images/backSlide.png" alt="page suivante"></img>
 		</a>
 	</div>
 </div>
